# bazel-cmake-examples

./: CMakeLists.txt  WORKSPACE  boost.BUILD  boost_linux.BUILD  boost_osx.BUILD
src/: BUILD.bazel  CMakeLists.txt  main.cpp
